[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulseseek"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jax"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-benchmark",
    "scipy",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-autorefs",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pulseseek = ["bch.csv"]

[tool.pytest.ini_options]
addopts = [
    "-q",
    "--benchmark-autosave",
    "--benchmark-min-time=0.2",
    "--benchmark-max-time=2.0",
    "--benchmark-min-rounds=5"
]
markers = [
    "bench: benchmarks (may be slow)"
]